# galaxy_visualization_raylib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  frontend.cpp  galaxy_visualization  meson.build  meson_build_and_run.sh
include/: includes.h
includes/: includes.h  raylib_includes.h  rlights.h
input_data/: data_100k_arcmin.txt  flat_100k_arcmin.txt
shaders/: lighting.fs  lighting_instancing.vs
src/: frontend.cpp
